--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <artifactId> gson </artifactId>
             <version> 2.8.5 </version>
         </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx</artifactId>
+            <version>8.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
