--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>co.gov.deajvpar.gestcontractclient.fx.App</mainClass>
+                    <mainClass>co.gov.deajvpar.gestcontractclient.fx.MainLauncher</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -92,6 +92,41 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <!-- Copia las dependencias librerias javafx .jar a la carpeta "lib" de tu proyecto -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                    <excludeTransitive>false</excludeTransitive> 
+                    <stripVersion>false</stripVersion>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+    
+            <!-- Agrega la referencia del contenido de la carpeta "lib" en el classpath de tu proyecto-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>co.gov.deajvpar.gestcontractclient.fx.MainLauncher</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
         </plugins>
     </build>
